--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@
 }
 
 body {
-  margin: 0 auto;
   font-size: 0.9em;
 }
 
@@ -267,14 +266,13 @@ input [type="submit"],
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 100;
 }
 
-.header__logo {
+.header__logo,
+.header .burger__label {
   font-size: 1.5em;
   letter-spacing: 2px;
   line-height: 1.2;
@@ -286,11 +284,12 @@ input [type="submit"],
 
 .nav {
   position: absolute;
-  width: 100%;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   -webkit-transform: translateY(-180%);
           transform: translateY(-180%);
+  width: 60%;
+  height: auto;
 }
 
 .nav__list {
@@ -302,9 +301,9 @@ input [type="submit"],
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0;
-  position: absolute;
-  top: -40px;
-  bottom: 0;
+  margin: 0 auto;
+  position: relative;
+  bottom: -10px;
 }
 
 @media (max-width: 780px) {
@@ -336,14 +335,8 @@ input [type="submit"],
   text-shadow: 0 2px 15px #fff;
 }
 
-@media (max-width: 780px) {
-  .nav__link {
-    font-size: 1.2em;
-  }
-}
-
 .nav__item {
-  margin: 10px;
+  margin: 0 15px;
 }
 
 .nav__item:hover {
@@ -355,17 +348,11 @@ input [type="submit"],
 
 .burger__label {
   margin: 0 auto;
-  border: none;
-  background: none;
-  color: #fff;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 1.8em;
-  text-transform: uppercase;
-  outline: none;
-  display: none;
-  z-index: 20;
-  line-height: 0.1;
   padding-left: 7em;
+  margin-top: 5px;
+  display: none;
+  cursor: pointer;
+  z-index: 1;
 }
 
 @media (max-width: 780px) {
@@ -383,11 +370,18 @@ input [type="submit"],
 
 #burger {
   opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 5em;
 }
 
 .form__burger {
   position: absolute;
-  bottom: 0;
+  top: -15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .header__container {
@@ -408,6 +402,8 @@ input [type="submit"],
           align-items: center;
   width: 100%;
   max-height: 100%;
+  margin: 0 auto;
+  position: relative;
 }
 
 .header__block_logo {
@@ -419,6 +415,44 @@ input [type="submit"],
   width: 60%;
 }
 
+/*
+.close{
+	position: absolute;
+	top: 5px;
+	right: 10px;
+	color: #fff;
+}
+.nav{
+	opacity: 0;
+	visibility: hidden;
+	transition: 0.3s ease-in;
+}
+.nav:target{
+	opacity: 1;
+	visibility: visible;
+}
+
+.nav__list > *:not(.close){
+	margin: 1em 0;
+}
+
+/*
+#burger:checked ~ .burger__label{
+	transform: rotate(45deg);}
+
+#burger:checked ~ .burger__label > span::before{
+		transform: rotate(0);
+		top:0;
+}
+#burger:checked ~ .burger__label > span::after{
+	transform: rotate(0);
+	top:0;
+}
+#burger:checked ~ .burger__label > nav__list{
+	opacity: 1;
+	left:0;
+}
+*/
 /* section CLIENTS*/
 .button_universal {
   background-color: #5474fd;
@@ -739,7 +773,7 @@ input [type="submit"],
 
 .block_review-text::before {
   position: absolute;
-  top: 0.3em;
+  top: -1em;
   left: -2.2em;
   content: "\f10d";
   padding-right: 10px;
