--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 .HomePage, .clients, .hotel, .view, .tourist {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -72,30 +72,6 @@ body {
   background-image: url(../image/fon-first.jpg);
 }
 
-@media (max-width: 1200px) {
-  .HomePage {
-    min-height: calc(90vh - 5.8em);
-  }
-}
-
-@media (max-width: 1024px) {
-  .HomePage {
-    min-height: calc(75vh - 5.8em);
-  }
-}
-
-@media (max-width: 1024px) {
-  .HomePage {
-    min-height: calc(70vh - 5.8em);
-  }
-}
-
-@media (max-width: 768px) {
-  .HomePage {
-    min-height: calc(60vh - 5.8em);
-  }
-}
-
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -128,6 +104,12 @@ body {
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
   margin: 0.5em auto 0;
+}
+
+@media (max-width: 480px) {
+  .container__title_h1 {
+    font-size: 2em;
+  }
 }
 
 .container__title_h3 {
@@ -268,11 +250,34 @@ input [type="submit"],
           align-items: center;
   position: -webkit-sticky;
   position: sticky;
+  z-index: 100;
   top: 0;
 }
 
+.header__wrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .header__logo,
-.header .burger__label {
+.header .burger {
   font-size: 1.5em;
   letter-spacing: 2px;
   line-height: 1.2;
@@ -280,16 +285,12 @@ input [type="submit"],
   font-weight: 700;
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
+  padding-left: 30px;
 }
 
 .nav {
-  position: absolute;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  -webkit-transform: translateY(-180%);
-          transform: translateY(-180%);
-  width: 60%;
-  height: auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .nav__list {
@@ -297,13 +298,11 @@ input [type="submit"],
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-left: 210px;
   margin: 0 auto;
   position: relative;
-  bottom: -10px;
 }
 
 @media (max-width: 780px) {
@@ -346,118 +345,63 @@ input [type="submit"],
   transition: all .2s linear;
 }
 
-.burger__label {
+.burger {
   margin: 0 auto;
   padding-left: 7em;
   margin-top: 5px;
   display: none;
   cursor: pointer;
-  z-index: 1;
+  border: none;
+  outline: none;
+  background: none;
 }
 
 @media (max-width: 780px) {
-  .burger__label {
+  .burger {
     display: block;
+    margin-top: -1px;
   }
+}
+
+.close-btn {
+  margin: 20px 0;
+  border: none;
+  background: none;
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  outline: none;
+  display: none;
+  border: 1px solid #fff;
 }
 
 @media (max-width: 780px) {
-  .burger:checked ~ .nav {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+  .close-btn {
+    display: block;
+    text-shadow: 19px 15px 0px rgba(206, 89, 55, 0);
+  }
+  .close-btn:hover {
+    text-shadow: 1px 1px 2px black;
   }
 }
 
-#burger {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 5em;
+.nav__list.open {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  height: 35vh;
 }
 
-.form__burger {
-  position: absolute;
-  top: -15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.burger.close {
+  display: none;
 }
 
-.header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  max-height: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-
-.header__block_logo {
-  width: 40%;
-  padding: 0 5em;
-}
-
-.header__block_nav {
-  width: 60%;
-}
-
-/*
-.close{
-	position: absolute;
-	top: 5px;
-	right: 10px;
-	color: #fff;
-}
-.nav{
-	opacity: 0;
-	visibility: hidden;
-	transition: 0.3s ease-in;
-}
-.nav:target{
-	opacity: 1;
-	visibility: visible;
-}
-
-.nav__list > *:not(.close){
-	margin: 1em 0;
-}
-
-/*
-#burger:checked ~ .burger__label{
-	transform: rotate(45deg);}
-
-#burger:checked ~ .burger__label > span::before{
-		transform: rotate(0);
-		top:0;
-}
-#burger:checked ~ .burger__label > span::after{
-	transform: rotate(0);
-	top:0;
-}
-#burger:checked ~ .burger__label > nav__list{
-	opacity: 1;
-	left:0;
-}
-*/
 /* section CLIENTS*/
 .button_universal {
   background-color: #5474fd;
-  width: 100%;
-  max-width: 14.1em;
+  width: 14.1em;
   min-height: 3.8em;
   border: none;
   color: #fff;
@@ -505,9 +449,21 @@ input [type="submit"],
   width: calc(50% - 0.9em);
 }
 
+@media (max-width: 1024px) {
+  .block {
+    width: 80%;
+  }
+}
+
 .client__block_h2 {
   margin: 2em auto;
   font-weight: 300;
+}
+
+@media (max-width: 1024px) {
+  .client__block_h2 {
+    margin: 1em auto;
+  }
 }
 
 .client__block_text {
@@ -518,11 +474,47 @@ input [type="submit"],
 .image__block {
   position: relative;
   top: -7em;
+  width: 40%;
+}
+
+@media (max-width: 1024px) {
+  .image__block {
+    width: 70%;
+  }
 }
 
 @media (max-width: 1024px) {
   .client__block {
-    margin: -3em  auto 10em;
+    width: 60%;
+    margin: 3em auto 10em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 1024px) {
+  .image__block_top img {
+    width: 100%;
+    min-width: 200px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .image__block_bottom img {
+    width: 100%;
+    min-width: 200px;
+    margin-top: 1em;
   }
 }
 
@@ -564,6 +556,7 @@ input [type="submit"],
 @media (max-width: 1024px) {
   .image__block_bottom {
     right: 0;
+    position: relative;
   }
 }
 
@@ -578,19 +571,25 @@ input [type="submit"],
 
 @media (max-width: 1024px) {
   .icon_text {
-    font-size: 2em;
+    font-size: 1.7em;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 480px) {
   .icon_text {
-    font-size: 1.75em;
+    font-size: 1.3em;
+  }
+}
+
+@media (max-width: 480px) {
+  .icon_text {
+    font-size: 1em;
   }
 }
 
 .booking {
   width: 100%;
-  min-height: 338px;
+  min-height: 21.125em;
   background-color: #333333;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -601,6 +600,18 @@ input [type="submit"],
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media (max-width: 1024px) {
+  .booking {
+    min-height: 18em;
+  }
+}
+
+@media (max-width: 480px) {
+  .booking {
+    min-height: 13em;
+  }
 }
 
 .booking__container {
@@ -626,6 +637,31 @@ input [type="submit"],
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.icon_search,
+.icon_select,
+.icon_like {
+  width: 50px;
+  height: 50px;
+}
+
+@media (max-width: 1024px) {
+  .icon_search,
+  .icon_select,
+  .icon_like {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .icon_search,
+  .icon_select,
+  .icon_like {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .hotel {
@@ -759,6 +795,7 @@ input [type="submit"],
 @media (max-width: 1024px) {
   .tourist__block_review {
     margin-top: 5em;
+    width: 80%;
   }
 }
 
@@ -778,7 +815,7 @@ input [type="submit"],
   content: "\f10d";
   padding-right: 10px;
   color: #5474fd;
-  font-family: "Font Awesome 5 Free","Font Awesome 5 Brands";
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
   font-weight: 900;
   display: inline-block;
   max-width: 1.1em;
